--- a/3 - Loops.ipynb
+++ b/3 - Loops.ipynb
@@ -94,6 +94,29 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ted\n",
+      "Robyn\n",
+      "Barney\n",
+      "Lily\n",
+      "Marshall\n"
+     ]
+    }
+   ],
+   "source": [
+    "for f in myfriends\n",
+    "    println(f)\n",
+    "end"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -112,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +213,7 @@
        " 0  0  0  0  0"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -202,7 +225,135 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "search: \u001b[0m\u001b[1mf\u001b[22m\u001b[0m\u001b[1mi\u001b[22m\u001b[0m\u001b[1ml\u001b[22m\u001b[0m\u001b[1ml\u001b[22m \u001b[0m\u001b[1mf\u001b[22m\u001b[0m\u001b[1mi\u001b[22m\u001b[0m\u001b[1ml\u001b[22m\u001b[0m\u001b[1ml\u001b[22m! \u001b[0m\u001b[1mf\u001b[22m\u001b[0m\u001b[1mi\u001b[22mna\u001b[0m\u001b[1ml\u001b[22m\u001b[0m\u001b[1ml\u001b[22my \u001b[0m\u001b[1mf\u001b[22m\u001b[0m\u001b[1mi\u001b[22mnda\u001b[0m\u001b[1ml\u001b[22m\u001b[0m\u001b[1ml\u001b[22m \u001b[0m\u001b[1mf\u001b[22m\u001b[0m\u001b[1mi\u001b[22m\u001b[0m\u001b[1ml\u001b[22mter \u001b[0m\u001b[1mf\u001b[22m\u001b[0m\u001b[1mi\u001b[22m\u001b[0m\u001b[1ml\u001b[22mter! \u001b[0m\u001b[1mf\u001b[22m\u001b[0m\u001b[1mi\u001b[22m\u001b[0m\u001b[1ml\u001b[22mesize \u001b[0m\u001b[1mf\u001b[22m\u001b[0m\u001b[1mi\u001b[22m\u001b[0m\u001b[1ml\u001b[22memode is\u001b[0m\u001b[1mf\u001b[22m\u001b[0m\u001b[1mi\u001b[22m\u001b[0m\u001b[1ml\u001b[22me\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/latex": [
+       "\\begin{verbatim}\n",
+       "fill(x, dims::Tuple)\n",
+       "fill(x, dims...)\n",
+       "\\end{verbatim}\n",
+       "Create an array filled with the value \\texttt{x}. For example, \\texttt{fill(1.0, (5,5))} returns a 5×5 array of floats, with each element initialized to \\texttt{1.0}.\n",
+       "\n",
+       "\\texttt{dims} may be specified as either a tuple or a sequence of arguments. For example, the common idiom \\texttt{fill(x)} creates a zero-dimensional array containing the single value \\texttt{x}.\n",
+       "\n",
+       "\\section{Examples}\n",
+       "\\begin{verbatim}\n",
+       "julia> fill(1.0, (2,3))\n",
+       "2×3 Matrix{Float64}:\n",
+       " 1.0  1.0  1.0\n",
+       " 1.0  1.0  1.0\n",
+       "\n",
+       "julia> fill(42)\n",
+       "0-dimensional Array{Int64, 0}:\n",
+       "42\n",
+       "\\end{verbatim}\n",
+       "If \\texttt{x} is an object reference, all elements will refer to the same object:\n",
+       "\n",
+       "\\begin{verbatim}\n",
+       "julia> A = fill(zeros(2), 2);\n",
+       "\n",
+       "julia> A[1][1] = 42; # modifies both A[1][1] and A[2][1]\n",
+       "\n",
+       "julia> A\n",
+       "2-element Vector{Vector{Float64}}:\n",
+       " [42.0, 0.0]\n",
+       " [42.0, 0.0]\n",
+       "\\end{verbatim}\n"
+      ],
+      "text/markdown": [
+       "```\n",
+       "fill(x, dims::Tuple)\n",
+       "fill(x, dims...)\n",
+       "```\n",
+       "\n",
+       "Create an array filled with the value `x`. For example, `fill(1.0, (5,5))` returns a 5×5 array of floats, with each element initialized to `1.0`.\n",
+       "\n",
+       "`dims` may be specified as either a tuple or a sequence of arguments. For example, the common idiom `fill(x)` creates a zero-dimensional array containing the single value `x`.\n",
+       "\n",
+       "# Examples\n",
+       "\n",
+       "```jldoctest\n",
+       "julia> fill(1.0, (2,3))\n",
+       "2×3 Matrix{Float64}:\n",
+       " 1.0  1.0  1.0\n",
+       " 1.0  1.0  1.0\n",
+       "\n",
+       "julia> fill(42)\n",
+       "0-dimensional Array{Int64, 0}:\n",
+       "42\n",
+       "```\n",
+       "\n",
+       "If `x` is an object reference, all elements will refer to the same object:\n",
+       "\n",
+       "```jldoctest\n",
+       "julia> A = fill(zeros(2), 2);\n",
+       "\n",
+       "julia> A[1][1] = 42; # modifies both A[1][1] and A[2][1]\n",
+       "\n",
+       "julia> A\n",
+       "2-element Vector{Vector{Float64}}:\n",
+       " [42.0, 0.0]\n",
+       " [42.0, 0.0]\n",
+       "```\n"
+      ],
+      "text/plain": [
+       "\u001b[36m  fill(x, dims::Tuple)\u001b[39m\n",
+       "\u001b[36m  fill(x, dims...)\u001b[39m\n",
+       "\n",
+       "  Create an array filled with the value \u001b[36mx\u001b[39m. For example, \u001b[36mfill(1.0, (5,5))\u001b[39m\n",
+       "  returns a 5×5 array of floats, with each element initialized to \u001b[36m1.0\u001b[39m.\n",
+       "\n",
+       "  \u001b[36mdims\u001b[39m may be specified as either a tuple or a sequence of arguments. For\n",
+       "  example, the common idiom \u001b[36mfill(x)\u001b[39m creates a zero-dimensional array\n",
+       "  containing the single value \u001b[36mx\u001b[39m.\n",
+       "\n",
+       "\u001b[1m  Examples\u001b[22m\n",
+       "\u001b[1m  ≡≡≡≡≡≡≡≡≡≡\u001b[22m\n",
+       "\n",
+       "\u001b[36m  julia> fill(1.0, (2,3))\u001b[39m\n",
+       "\u001b[36m  2×3 Matrix{Float64}:\u001b[39m\n",
+       "\u001b[36m   1.0  1.0  1.0\u001b[39m\n",
+       "\u001b[36m   1.0  1.0  1.0\u001b[39m\n",
+       "\u001b[36m  \u001b[39m\n",
+       "\u001b[36m  julia> fill(42)\u001b[39m\n",
+       "\u001b[36m  0-dimensional Array{Int64, 0}:\u001b[39m\n",
+       "\u001b[36m  42\u001b[39m\n",
+       "\n",
+       "  If \u001b[36mx\u001b[39m is an object reference, all elements will refer to the same object:\n",
+       "\n",
+       "\u001b[36m  julia> A = fill(zeros(2), 2);\u001b[39m\n",
+       "\u001b[36m  \u001b[39m\n",
+       "\u001b[36m  julia> A[1][1] = 42; # modifies both A[1][1] and A[2][1]\u001b[39m\n",
+       "\u001b[36m  \u001b[39m\n",
+       "\u001b[36m  julia> A\u001b[39m\n",
+       "\u001b[36m  2-element Vector{Vector{Float64}}:\u001b[39m\n",
+       "\u001b[36m   [42.0, 0.0]\u001b[39m\n",
+       "\u001b[36m   [42.0, 0.0]\u001b[39m"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "?fill"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +367,7 @@
        " 6  7  8  9  10"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -239,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -253,7 +404,7 @@
        " 0  0  0  0  0"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -264,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +429,7 @@
        " 6  7  8  9  10"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -299,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -313,7 +464,7 @@
        " 6  7  8  9  10"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -334,10 +485,122 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 -> 1\n",
+      "2 -> 4\n",
+      "3 -> 9\n",
+      "4 -> 16\n",
+      "5 -> 25\n",
+      "6 -> 36\n",
+      "7 -> 49\n",
+      "8 -> 64\n",
+      "9 -> 81\n",
+      "10 -> 100\n",
+      "11 -> 121\n",
+      "12 -> 144\n",
+      "13 -> 169\n",
+      "14 -> 196\n",
+      "15 -> 225\n",
+      "16 -> 256\n",
+      "17 -> 289\n",
+      "18 -> 324\n",
+      "19 -> 361\n",
+      "20 -> 400\n",
+      "21 -> 441\n",
+      "22 -> 484\n",
+      "23 -> 529\n",
+      "24 -> 576\n",
+      "25 -> 625\n",
+      "26 -> 676\n",
+      "27 -> 729\n",
+      "28 -> 784\n",
+      "29 -> 841\n",
+      "30 -> 900\n",
+      "31 -> 961\n",
+      "32 -> 1024\n",
+      "33 -> 1089\n",
+      "34 -> 1156\n",
+      "35 -> 1225\n",
+      "36 -> 1296\n",
+      "37 -> 1369\n",
+      "38 -> 1444\n",
+      "39 -> 1521\n",
+      "40 -> 1600\n",
+      "41 -> 1681\n",
+      "42 -> 1764\n",
+      "43 -> 1849\n",
+      "44 -> 1936\n",
+      "45 -> 2025\n",
+      "46 -> 2116\n",
+      "47 -> 2209\n",
+      "48 -> 2304\n",
+      "49 -> 2401\n",
+      "50 -> 2500\n",
+      "51 -> 2601\n",
+      "52 -> 2704\n",
+      "53 -> 2809\n",
+      "54 -> 2916\n",
+      "55 -> 3025\n",
+      "56 -> 3136\n",
+      "57 -> 3249\n",
+      "58 -> 3364\n",
+      "59 -> 3481\n",
+      "60 -> 3600\n",
+      "61 -> 3721\n",
+      "62 -> 3844\n",
+      "63 -> 3969\n",
+      "64 -> 4096\n",
+      "65 -> 4225\n",
+      "66 -> 4356\n",
+      "67 -> 4489\n",
+      "68 -> 4624\n",
+      "69 -> 4761\n",
+      "70 -> 4900\n",
+      "71 -> 5041\n",
+      "72 -> 5184\n",
+      "73 -> 5329\n",
+      "74 -> 5476\n",
+      "75 -> 5625\n",
+      "76 -> 5776\n",
+      "77 -> 5929\n",
+      "78 -> 6084\n",
+      "79 -> 6241\n",
+      "80 -> 6400\n",
+      "81 -> 6561\n",
+      "82 -> 6724\n",
+      "83 -> 6889\n",
+      "84 -> 7056\n",
+      "85 -> 7225\n",
+      "86 -> 7396\n",
+      "87 -> 7569\n",
+      "88 -> 7744\n",
+      "89 -> 7921\n",
+      "90 -> 8100\n",
+      "91 -> 8281\n",
+      "92 -> 8464\n",
+      "93 -> 8649\n",
+      "94 -> 8836\n",
+      "95 -> 9025\n",
+      "96 -> 9216\n",
+      "97 -> 9409\n",
+      "98 -> 9604\n",
+      "99 -> 9801\n",
+      "100 -> 10000\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in 1:100\n",
+    "    square = i ^ 2\n",
+    "    println(\"$i -> $square\")\n",
+    "end"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -353,14 +616,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Dict{Int64, Int64}()"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "squares = Dict{Int64, Int64}()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in 1:100\n",
+    "    squares[i] = i ^ 2\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -391,14 +678,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "100-element Vector{Int64}:\n",
+       "     1\n",
+       "     4\n",
+       "     9\n",
+       "    16\n",
+       "    25\n",
+       "    36\n",
+       "    49\n",
+       "    64\n",
+       "    81\n",
+       "   100\n",
+       "   121\n",
+       "   144\n",
+       "   169\n",
+       "     ⋮\n",
+       "  7921\n",
+       "  8100\n",
+       "  8281\n",
+       "  8464\n",
+       "  8649\n",
+       "  8836\n",
+       "  9025\n",
+       "  9216\n",
+       "  9409\n",
+       "  9604\n",
+       "  9801\n",
+       " 10000"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "squares_arr = [i ^ 2 for i in 1:100]"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -418,11 +744,18 @@
     "@assert length(squares_arr) == 100\n",
     "@assert sum(squares_arr) == 338350"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.6.0",
+   "display_name": "Julia 1.6.4",
    "language": "julia",
    "name": "julia-1.6"
   },
@@ -430,7 +763,7 @@
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.6.3"
+   "version": "1.6.4"
   }
  },
  "nbformat": 4,
