--- a/4 - Conditionals.ipynb
+++ b/4 - Conditionals.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -35,7 +35,7 @@
        "5"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +110,7 @@
        "30"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +138,7 @@
        "30"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -169,7 +169,7 @@
        "30"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +202,7 @@
        "false"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -229,13 +229,33 @@
        "true"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "true && (println(\"hi\"); true)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x"
    ]
   },
   {
@@ -247,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -261,11 +281,11 @@
       " [1] error(s::String)",
       "   @ Base ./error.jl:33",
       " [2] top-level scope",
-      "   @ In[14]:1",
+      "   @ In[8]:1",
       " [3] eval",
       "   @ ./boot.jl:360 [inlined]",
       " [4] include_string(mapexpr::typeof(REPL.softscope), mod::Module, code::String, filename::String)",
-      "   @ Base ./loading.jl:1094"
+      "   @ Base ./loading.jl:1116"
      ]
     }
    ],
@@ -282,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +311,7 @@
        "true"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -309,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -336,10 +356,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "odd\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = 43\n",
+    "if n % 2 == 0\n",
+    "    println(n)\n",
+    "else\n",
+    "    println(\"odd\")\n",
+    "end"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -347,6 +382,23 @@
    "source": [
     "#### 5.2 \n",
     "Rewrite the code from 5.1 using a ternary operator."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "odd\n"
+     ]
+    }
+   ],
+   "source": [
+    "println( (n % 2 == 0) ? n : \"odd\" )"
    ]
   },
   {
@@ -359,7 +411,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.6.0",
+   "display_name": "Julia 1.6.4",
    "language": "julia",
    "name": "julia-1.6"
   },
@@ -367,7 +419,7 @@
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.6.0"
+   "version": "1.6.4"
   }
  },
  "nbformat": 4,
