--- a/5 - Functions.ipynb
+++ b/5 - Functions.ipynb
@@ -320,9 +320,9 @@
      "data": {
       "text/plain": [
        "3×3 Matrix{Float64}:\n",
-       " 0.983045  0.336857  0.21284\n",
-       " 0.102728  0.711431  0.817376\n",
-       " 0.504421  0.681324  0.833934"
+       " 0.0287221  0.266229  0.142867\n",
+       " 0.0612254  0.884918  0.326986\n",
+       " 0.386875   0.459456  0.684154"
       ]
      },
      "execution_count": 14,
@@ -344,9 +344,9 @@
      "data": {
       "text/plain": [
        "3×3 Matrix{Float64}:\n",
-       " 1.10834   0.715809  0.662064\n",
-       " 0.586371  1.09764   1.28501\n",
-       " 0.986512  1.22281   1.3597"
+       " 0.0723967  0.308879  0.1889\n",
+       " 0.182441   0.949616  0.521812\n",
+       " 0.303925   0.823917  0.673575"
       ]
      },
      "execution_count": 15,
@@ -401,9 +401,9 @@
      "data": {
       "text/plain": [
        "3-element Vector{Float64}:\n",
-       " 0.1488599996403983\n",
-       " 0.5795662436976401\n",
-       " 0.12786532477145474"
+       " 0.8063412510990675\n",
+       " 0.5386312115199166\n",
+       " 0.1626374591310833"
       ]
      },
      "execution_count": 17,
@@ -417,29 +417,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "ename": "LoadError",
-     "evalue": "MethodError: no method matching ^(::Vector{Int64}, ::Int64)\n\u001b[0mClosest candidates are:\n\u001b[0m  ^(\u001b[91m::Union{AbstractChar, AbstractString}\u001b[39m, ::Integer) at strings/basic.jl:718\n\u001b[0m  ^(\u001b[91m::LinearAlgebra.Symmetric{var\"#s832\", S} where {var\"#s832\"<:Real, S<:(AbstractMatrix{var\"#s832\"} where var\"#s832\"<:var\"#s832\")}\u001b[39m, ::Integer) at /Users/julia/buildbot/worker/package_macos64/build/usr/share/julia/stdlib/v1.6/LinearAlgebra/src/symmetric.jl:868\n\u001b[0m  ^(\u001b[91m::LinearAlgebra.Symmetric{var\"#s832\", S} where {var\"#s832\"<:Complex, S<:(AbstractMatrix{var\"#s832\"} where var\"#s832\"<:var\"#s832\")}\u001b[39m, ::Integer) at /Users/julia/buildbot/worker/package_macos64/build/usr/share/julia/stdlib/v1.6/LinearAlgebra/src/symmetric.jl:869\n\u001b[0m  ...",
+     "evalue": "MethodError: no method matching ^(::Vector{Float64}, ::Int64)\n\u001b[0mClosest candidates are:\n\u001b[0m  ^(\u001b[91m::Union{AbstractChar, AbstractString}\u001b[39m, ::Integer) at strings/basic.jl:718\n\u001b[0m  ^(\u001b[91m::LinearAlgebra.Hermitian\u001b[39m, ::Integer) at /private/tmp/julia-20211119-70389-1fwns3u/julia-1.6.4/usr/share/julia/stdlib/v1.6/LinearAlgebra/src/symmetric.jl:890\n\u001b[0m  ^(\u001b[91m::LinearAlgebra.Hermitian{T, S} where S<:(AbstractMatrix{var\"#s814\"} where var\"#s814\"<:T)\u001b[39m, ::Real) where T at /private/tmp/julia-20211119-70389-1fwns3u/julia-1.6.4/usr/share/julia/stdlib/v1.6/LinearAlgebra/src/symmetric.jl:901\n\u001b[0m  ...",
      "output_type": "error",
      "traceback": [
-      "MethodError: no method matching ^(::Vector{Int64}, ::Int64)\n\u001b[0mClosest candidates are:\n\u001b[0m  ^(\u001b[91m::Union{AbstractChar, AbstractString}\u001b[39m, ::Integer) at strings/basic.jl:718\n\u001b[0m  ^(\u001b[91m::LinearAlgebra.Symmetric{var\"#s832\", S} where {var\"#s832\"<:Real, S<:(AbstractMatrix{var\"#s832\"} where var\"#s832\"<:var\"#s832\")}\u001b[39m, ::Integer) at /Users/julia/buildbot/worker/package_macos64/build/usr/share/julia/stdlib/v1.6/LinearAlgebra/src/symmetric.jl:868\n\u001b[0m  ^(\u001b[91m::LinearAlgebra.Symmetric{var\"#s832\", S} where {var\"#s832\"<:Complex, S<:(AbstractMatrix{var\"#s832\"} where var\"#s832\"<:var\"#s832\")}\u001b[39m, ::Integer) at /Users/julia/buildbot/worker/package_macos64/build/usr/share/julia/stdlib/v1.6/LinearAlgebra/src/symmetric.jl:869\n\u001b[0m  ...",
+      "MethodError: no method matching ^(::Vector{Float64}, ::Int64)\n\u001b[0mClosest candidates are:\n\u001b[0m  ^(\u001b[91m::Union{AbstractChar, AbstractString}\u001b[39m, ::Integer) at strings/basic.jl:718\n\u001b[0m  ^(\u001b[91m::LinearAlgebra.Hermitian\u001b[39m, ::Integer) at /private/tmp/julia-20211119-70389-1fwns3u/julia-1.6.4/usr/share/julia/stdlib/v1.6/LinearAlgebra/src/symmetric.jl:890\n\u001b[0m  ^(\u001b[91m::LinearAlgebra.Hermitian{T, S} where S<:(AbstractMatrix{var\"#s814\"} where var\"#s814\"<:T)\u001b[39m, ::Real) where T at /private/tmp/julia-20211119-70389-1fwns3u/julia-1.6.4/usr/share/julia/stdlib/v1.6/LinearAlgebra/src/symmetric.jl:901\n\u001b[0m  ...",
       "",
       "Stacktrace:",
       " [1] macro expansion",
       "   @ ./none:0 [inlined]",
       " [2] literal_pow",
       "   @ ./none:0 [inlined]",
-      " [3] f(x::Vector{Int64})",
+      " [3] f(x::Vector{Float64})",
       "   @ Main ./In[2]:2",
       " [4] top-level scope",
-      "   @ In[22]:2",
+      "   @ In[18]:2",
       " [5] eval",
       "   @ ./boot.jl:360 [inlined]",
       " [6] include_string(mapexpr::typeof(REPL.softscope), mod::Module, code::String, filename::String)",
-      "   @ Base ./loading.jl:1094"
+      "   @ Base ./loading.jl:1116"
      ]
     }
    ],
@@ -461,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -473,7 +473,7 @@
        " 2"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -484,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -496,7 +496,7 @@
        " 5"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -519,7 +519,7 @@
        " 2"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -539,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -551,7 +551,7 @@
        " 5"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -562,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -574,7 +574,7 @@
        " 5"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -605,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -617,7 +617,7 @@
        " 9"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -637,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -646,7 +646,7 @@
        "#5 (generic function with 1 method)"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -664,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -676,7 +676,7 @@
        " 27"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -703,7 +703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -715,7 +715,7 @@
        " 9"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -743,7 +743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -755,7 +755,7 @@
        " 9"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -793,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -805,7 +805,7 @@
        " 7  8  9"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -816,7 +816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -828,7 +828,7 @@
        " 102  126  150"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -851,19 +851,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "3×3 Matrix{Int64}:\n",
-       "  1   4   9\n",
-       " 16  25  36\n",
-       " 49  64  81"
+       "  4   9   16\n",
+       " 25  36   49\n",
+       " 64  81  100"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -883,19 +883,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "3×3 Matrix{Float64}:\n",
-       "  3.0   6.0   9.0\n",
-       " 12.0  15.0  18.0\n",
-       " 21.0  24.0  27.0"
+       "  6.0   9.0  12.0\n",
+       " 15.0  18.0  21.0\n",
+       " 24.0  27.0  30.0"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -913,19 +913,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "3×3 Matrix{Float64}:\n",
-       "  3.0   6.0   9.0\n",
-       " 12.0  15.0  18.0\n",
-       " 21.0  24.0  27.0"
+       "  6.0   9.0  12.0\n",
+       " 15.0  18.0  21.0\n",
+       " 24.0  27.0  30.0"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -953,14 +953,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "add_one (generic function with 1 method)"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "function add_one(n)\n",
+    "    n + 1\n",
+    "end"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -982,7 +997,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1012,14 +1027,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3×3 Matrix{Int64}:\n",
+       " 2  3   4\n",
+       " 5  6   7\n",
+       " 8  9  10"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A1 = map(x -> x+1, A)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1036,14 +1067,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3×3 Matrix{Int64}:\n",
+       " 3   4   5\n",
+       " 6   7   8\n",
+       " 9  10  11"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A2 = A1 .+ 1"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1062,11 +1109,18 @@
    "source": [
     "@assert A2 == [3 4 5; 6 7 8; 9 10 11]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.6.0",
+   "display_name": "Julia 1.6.4",
    "language": "julia",
    "name": "julia-1.6"
   },
@@ -1074,7 +1128,7 @@
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.6.3"
+   "version": "1.6.4"
   }
  },
  "nbformat": 4,
