--- a/6 - Packages.ipynb
+++ b/6 - Packages.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -36,14 +36,9 @@
      "output_type": "stream",
      "text": [
       "\u001b[32m\u001b[1m    Updating\u001b[22m\u001b[39m registry at `~/.julia/registries/General`\n",
-      "\u001b[32m\u001b[1m    Updating\u001b[22m\u001b[39m git-repo `https://github.com/JuliaRegistries/General.git`\n",
-      "\u001b[32m\u001b[1m    Updating\u001b[22m\u001b[39m registry at `~/.julia/registries/JuliaPOMDP`\n",
-      "\u001b[32m\u001b[1m    Updating\u001b[22m\u001b[39m git-repo `https://github.com/JuliaPOMDP/Registry`\n",
       "\u001b[32m\u001b[1m   Resolving\u001b[22m\u001b[39m package versions...\n",
-      "\u001b[32m\u001b[1m    Updating\u001b[22m\u001b[39m `~/Desktop/Introduction-to-Julia/Project.toml`\n",
-      " \u001b[90m [7876af07] \u001b[39m\u001b[92m+ Example v0.5.3\u001b[39m\n",
-      "\u001b[32m\u001b[1m    Updating\u001b[22m\u001b[39m `~/Desktop/Introduction-to-Julia/Manifest.toml`\n",
-      " \u001b[90m [7876af07] \u001b[39m\u001b[92m+ Example v0.5.3\u001b[39m\n"
+      "\u001b[32m\u001b[1m  No Changes\u001b[22m\u001b[39m to `~/repos/julia/Introduction-to-Julia/Project.toml`\n",
+      "\u001b[32m\u001b[1m  No Changes\u001b[22m\u001b[39m to `~/repos/julia/Introduction-to-Julia/Manifest.toml`\n"
      ]
     }
    ],
@@ -61,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +89,7 @@
        "\"Hello, it's me. I was wondering if after all these years you'd like to meet.\""
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -112,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -120,8 +115,8 @@
      "output_type": "stream",
      "text": [
       "\u001b[32m\u001b[1m   Resolving\u001b[22m\u001b[39m package versions...\n",
-      "\u001b[32m\u001b[1m  No Changes\u001b[22m\u001b[39m to `~/Desktop/Introduction-to-Julia/Project.toml`\n",
-      "\u001b[32m\u001b[1m  No Changes\u001b[22m\u001b[39m to `~/Desktop/Introduction-to-Julia/Manifest.toml`\n"
+      "\u001b[32m\u001b[1m  No Changes\u001b[22m\u001b[39m to `~/repos/julia/Introduction-to-Julia/Project.toml`\n",
+      "\u001b[32m\u001b[1m  No Changes\u001b[22m\u001b[39m to `~/repos/julia/Introduction-to-Julia/Manifest.toml`\n"
      ]
     }
    ],
@@ -131,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -292,7 +287,7 @@
        " RGB{N0f8}(0.6,0.435,0.239)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -310,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -323,31 +318,213 @@
        "     width=\"75mm\" height=\"75mm\"\n",
        "     viewBox=\"0 0 3 3\" preserveAspectRatio=\"none\"\n",
        "     shape-rendering=\"crispEdges\" stroke=\"none\">\n",
-       "<rect width=\".96\" height=\".96\" x=\"0\" y=\"0\" fill=\"#485C00\" />\n",
-       "<rect width=\".96\" height=\".96\" x=\"1\" y=\"0\" fill=\"#FF9BB0\" />\n",
-       "<rect width=\".96\" height=\".96\" x=\"2\" y=\"0\" fill=\"#CAAC51\" />\n",
-       "<rect width=\".96\" height=\".96\" x=\"0\" y=\"1\" fill=\"#B5FF4E\" />\n",
-       "<rect width=\".96\" height=\".96\" x=\"1\" y=\"1\" fill=\"#44005C\" />\n",
-       "<rect width=\".96\" height=\".96\" x=\"2\" y=\"1\" fill=\"#00C3C6\" />\n",
-       "<rect width=\".96\" height=\".96\" x=\"0\" y=\"2\" fill=\"#C8C2B5\" />\n",
-       "<rect width=\".96\" height=\".96\" x=\"1\" y=\"2\" fill=\"#687B7A\" />\n",
-       "<rect width=\".96\" height=\".96\" x=\"2\" y=\"2\" fill=\"#FED206\" />\n",
+       "<rect width=\".96\" height=\".96\" x=\"0\" y=\"0\" fill=\"#0050E6\" />\n",
+       "<rect width=\".96\" height=\".96\" x=\"1\" y=\"0\" fill=\"#CAAC51\" />\n",
+       "<rect width=\".96\" height=\".96\" x=\"2\" y=\"0\" fill=\"#DA003F\" />\n",
+       "<rect width=\".96\" height=\".96\" x=\"0\" y=\"1\" fill=\"#A4675C\" />\n",
+       "<rect width=\".96\" height=\".96\" x=\"1\" y=\"1\" fill=\"#005815\" />\n",
+       "<rect width=\".96\" height=\".96\" x=\"2\" y=\"1\" fill=\"#EF007A\" />\n",
+       "<rect width=\".96\" height=\".96\" x=\"0\" y=\"2\" fill=\"#FF342D\" />\n",
+       "<rect width=\".96\" height=\".96\" x=\"1\" y=\"2\" fill=\"#B6F9D9\" />\n",
+       "<rect width=\".96\" height=\".96\" x=\"2\" y=\"2\" fill=\"#00FFC8\" />\n",
        "</svg>"
       ],
       "text/plain": [
        "3×3 Array{RGB{N0f8},2} with eltype RGB{FixedPointNumbers.N0f8}:\n",
-       " RGB{N0f8}(0.282,0.361,0.0)   …  RGB{N0f8}(0.792,0.675,0.318)\n",
-       " RGB{N0f8}(0.71,1.0,0.306)       RGB{N0f8}(0.0,0.765,0.776)\n",
-       " RGB{N0f8}(0.784,0.761,0.71)     RGB{N0f8}(0.996,0.824,0.024)"
+       " RGB{N0f8}(0.0,0.314,0.902)    …  RGB{N0f8}(0.855,0.0,0.247)\n",
+       " RGB{N0f8}(0.643,0.404,0.361)     RGB{N0f8}(0.937,0.0,0.478)\n",
+       " RGB{N0f8}(1.0,0.204,0.176)       RGB{N0f8}(0.0,1.0,0.784)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "rand(palette, 3, 3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "search: \u001b[0m\u001b[1mr\u001b[22m\u001b[0m\u001b[1ma\u001b[22m\u001b[0m\u001b[1mn\u001b[22m\u001b[0m\u001b[1md\u001b[22m \u001b[0m\u001b[1mr\u001b[22m\u001b[0m\u001b[1ma\u001b[22m\u001b[0m\u001b[1mn\u001b[22m\u001b[0m\u001b[1md\u001b[22mn t\u001b[0m\u001b[1mr\u001b[22m\u001b[0m\u001b[1ma\u001b[22m\u001b[0m\u001b[1mn\u001b[22msco\u001b[0m\u001b[1md\u001b[22me mac\u001b[0m\u001b[1mr\u001b[22moexp\u001b[0m\u001b[1ma\u001b[22m\u001b[0m\u001b[1mn\u001b[22m\u001b[0m\u001b[1md\u001b[22m @mac\u001b[0m\u001b[1mr\u001b[22moexp\u001b[0m\u001b[1ma\u001b[22m\u001b[0m\u001b[1mn\u001b[22m\u001b[0m\u001b[1md\u001b[22m @mac\u001b[0m\u001b[1mr\u001b[22moexp\u001b[0m\u001b[1ma\u001b[22m\u001b[0m\u001b[1mn\u001b[22m\u001b[0m\u001b[1md\u001b[22m1\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/latex": [
+       "\\begin{verbatim}\n",
+       "rand([rng=GLOBAL_RNG], [S], [dims...])\n",
+       "\\end{verbatim}\n",
+       "Pick a random element or array of random elements from the set of values specified by \\texttt{S}; \\texttt{S} can be\n",
+       "\n",
+       "\\begin{itemize}\n",
+       "\\item an indexable collection (for example \\texttt{1:9} or \\texttt{('x', \"y\", :z)}),\n",
+       "\n",
+       "\n",
+       "\\item an \\texttt{AbstractDict} or \\texttt{AbstractSet} object,\n",
+       "\n",
+       "\n",
+       "\\item a string (considered as a collection of characters), or\n",
+       "\n",
+       "\n",
+       "\\item a type: the set of values to pick from is then equivalent to \\texttt{typemin(S):typemax(S)} for integers (this is not applicable to \\href{@ref}{\\texttt{BigInt}}), to $[0, 1)$ for floating point numbers and to $[0, 1)+i[0, 1)$ for complex floating point numbers;\n",
+       "\n",
+       "\\end{itemize}\n",
+       "\\texttt{S} defaults to \\href{@ref}{\\texttt{Float64}}. When only one argument is passed besides the optional \\texttt{rng} and is a \\texttt{Tuple}, it is interpreted as a collection of values (\\texttt{S}) and not as \\texttt{dims}.\n",
+       "\n",
+       "\\begin{quote}\n",
+       "\\textbf{compat}\n",
+       "\n",
+       "Julia 1.1\n",
+       "\n",
+       "Support for \\texttt{S} as a tuple requires at least Julia 1.1.\n",
+       "\n",
+       "\\end{quote}\n",
+       "\\section{Examples}\n",
+       "\\begin{verbatim}\n",
+       "julia> rand(Int, 2)\n",
+       "2-element Array{Int64,1}:\n",
+       " 1339893410598768192\n",
+       " 1575814717733606317\n",
+       "\n",
+       "julia> using Random\n",
+       "\n",
+       "julia> rand(MersenneTwister(0), Dict(1=>2, 3=>4))\n",
+       "1=>2\n",
+       "\n",
+       "julia> rand((2, 3))\n",
+       "3\n",
+       "\n",
+       "julia> rand(Float64, (2, 3))\n",
+       "2×3 Array{Float64,2}:\n",
+       " 0.999717  0.0143835  0.540787\n",
+       " 0.696556  0.783855   0.938235\n",
+       "\\end{verbatim}\n",
+       "\\begin{quote}\n",
+       "\\textbf{note}\n",
+       "\n",
+       "Note\n",
+       "\n",
+       "The complexity of \\texttt{rand(rng, s::Union\\{AbstractDict,AbstractSet\\})} is linear in the length of \\texttt{s}, unless an optimized method with constant complexity is available, which is the case for \\texttt{Dict}, \\texttt{Set} and \\texttt{BitSet}. For more than a few calls, use \\texttt{rand(rng, collect(s))} instead, or either \\texttt{rand(rng, Dict(s))} or \\texttt{rand(rng, Set(s))} as appropriate.\n",
+       "\n",
+       "\\end{quote}\n"
+      ],
+      "text/markdown": [
+       "```\n",
+       "rand([rng=GLOBAL_RNG], [S], [dims...])\n",
+       "```\n",
+       "\n",
+       "Pick a random element or array of random elements from the set of values specified by `S`; `S` can be\n",
+       "\n",
+       "  * an indexable collection (for example `1:9` or `('x', \"y\", :z)`),\n",
+       "  * an `AbstractDict` or `AbstractSet` object,\n",
+       "  * a string (considered as a collection of characters), or\n",
+       "  * a type: the set of values to pick from is then equivalent to `typemin(S):typemax(S)` for integers (this is not applicable to [`BigInt`](@ref)), to $[0, 1)$ for floating point numbers and to $[0, 1)+i[0, 1)$ for complex floating point numbers;\n",
+       "\n",
+       "`S` defaults to [`Float64`](@ref). When only one argument is passed besides the optional `rng` and is a `Tuple`, it is interpreted as a collection of values (`S`) and not as `dims`.\n",
+       "\n",
+       "!!! compat \"Julia 1.1\"\n",
+       "    Support for `S` as a tuple requires at least Julia 1.1.\n",
+       "\n",
+       "\n",
+       "# Examples\n",
+       "\n",
+       "```julia-repl\n",
+       "julia> rand(Int, 2)\n",
+       "2-element Array{Int64,1}:\n",
+       " 1339893410598768192\n",
+       " 1575814717733606317\n",
+       "\n",
+       "julia> using Random\n",
+       "\n",
+       "julia> rand(MersenneTwister(0), Dict(1=>2, 3=>4))\n",
+       "1=>2\n",
+       "\n",
+       "julia> rand((2, 3))\n",
+       "3\n",
+       "\n",
+       "julia> rand(Float64, (2, 3))\n",
+       "2×3 Array{Float64,2}:\n",
+       " 0.999717  0.0143835  0.540787\n",
+       " 0.696556  0.783855   0.938235\n",
+       "```\n",
+       "\n",
+       "!!! note\n",
+       "    The complexity of `rand(rng, s::Union{AbstractDict,AbstractSet})` is linear in the length of `s`, unless an optimized method with constant complexity is available, which is the case for `Dict`, `Set` and `BitSet`. For more than a few calls, use `rand(rng, collect(s))` instead, or either `rand(rng, Dict(s))` or `rand(rng, Set(s))` as appropriate.\n",
+       "\n"
+      ],
+      "text/plain": [
+       "\u001b[36m  rand([rng=GLOBAL_RNG], [S], [dims...])\u001b[39m\n",
+       "\n",
+       "  Pick a random element or array of random elements from the set of values\n",
+       "  specified by \u001b[36mS\u001b[39m; \u001b[36mS\u001b[39m can be\n",
+       "\n",
+       "    •  an indexable collection (for example \u001b[36m1:9\u001b[39m or \u001b[36m('x', \"y\", :z)\u001b[39m),\n",
+       "\n",
+       "    •  an \u001b[36mAbstractDict\u001b[39m or \u001b[36mAbstractSet\u001b[39m object,\n",
+       "\n",
+       "    •  a string (considered as a collection of characters), or\n",
+       "\n",
+       "    •  a type: the set of values to pick from is then equivalent to\n",
+       "       \u001b[36mtypemin(S):typemax(S)\u001b[39m for integers (this is not applicable to\n",
+       "       \u001b[36mBigInt\u001b[39m), to \u001b[35m[0, 1)\u001b[39m for floating point numbers and to \u001b[35m[0, 1)+i[0,\n",
+       "       1)\u001b[39m for complex floating point numbers;\n",
+       "\n",
+       "  \u001b[36mS\u001b[39m defaults to \u001b[36mFloat64\u001b[39m. When only one argument is passed besides the optional\n",
+       "  \u001b[36mrng\u001b[39m and is a \u001b[36mTuple\u001b[39m, it is interpreted as a collection of values (\u001b[36mS\u001b[39m) and not\n",
+       "  as \u001b[36mdims\u001b[39m.\n",
+       "\n",
+       "\u001b[39m\u001b[1m  │ \u001b[22m\u001b[39m\u001b[1mJulia 1.1\u001b[22m\n",
+       "\u001b[39m\u001b[1m  │\u001b[22m\n",
+       "\u001b[39m\u001b[1m  │\u001b[22m  Support for \u001b[36mS\u001b[39m as a tuple requires at least Julia 1.1.\n",
+       "\n",
+       "\u001b[1m  Examples\u001b[22m\n",
+       "\u001b[1m  ≡≡≡≡≡≡≡≡≡≡\u001b[22m\n",
+       "\n",
+       "\u001b[36m  julia> rand(Int, 2)\u001b[39m\n",
+       "\u001b[36m  2-element Array{Int64,1}:\u001b[39m\n",
+       "\u001b[36m   1339893410598768192\u001b[39m\n",
+       "\u001b[36m   1575814717733606317\u001b[39m\n",
+       "\u001b[36m  \u001b[39m\n",
+       "\u001b[36m  julia> using Random\u001b[39m\n",
+       "\u001b[36m  \u001b[39m\n",
+       "\u001b[36m  julia> rand(MersenneTwister(0), Dict(1=>2, 3=>4))\u001b[39m\n",
+       "\u001b[36m  1=>2\u001b[39m\n",
+       "\u001b[36m  \u001b[39m\n",
+       "\u001b[36m  julia> rand((2, 3))\u001b[39m\n",
+       "\u001b[36m  3\u001b[39m\n",
+       "\u001b[36m  \u001b[39m\n",
+       "\u001b[36m  julia> rand(Float64, (2, 3))\u001b[39m\n",
+       "\u001b[36m  2×3 Array{Float64,2}:\u001b[39m\n",
+       "\u001b[36m   0.999717  0.0143835  0.540787\u001b[39m\n",
+       "\u001b[36m   0.696556  0.783855   0.938235\u001b[39m\n",
+       "\n",
+       "\u001b[36m\u001b[1m  │ \u001b[22m\u001b[39m\u001b[36m\u001b[1mNote\u001b[22m\u001b[39m\n",
+       "\u001b[36m\u001b[1m  │\u001b[22m\u001b[39m\n",
+       "\u001b[36m\u001b[1m  │\u001b[22m\u001b[39m  The complexity of \u001b[36mrand(rng, s::Union{AbstractDict,AbstractSet})\u001b[39m is\n",
+       "\u001b[36m\u001b[1m  │\u001b[22m\u001b[39m  linear in the length of \u001b[36ms\u001b[39m, unless an optimized method with\n",
+       "\u001b[36m\u001b[1m  │\u001b[22m\u001b[39m  constant complexity is available, which is the case for \u001b[36mDict\u001b[39m, \u001b[36mSet\u001b[39m\n",
+       "\u001b[36m\u001b[1m  │\u001b[22m\u001b[39m  and \u001b[36mBitSet\u001b[39m. For more than a few calls, use \u001b[36mrand(rng, collect(s))\u001b[39m\n",
+       "\u001b[36m\u001b[1m  │\u001b[22m\u001b[39m  instead, or either \u001b[36mrand(rng, Dict(s))\u001b[39m or \u001b[36mrand(rng, Set(s))\u001b[39m as\n",
+       "\u001b[36m\u001b[1m  │\u001b[22m\u001b[39m  appropriate."
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "?rand"
    ]
   },
   {
@@ -369,14 +546,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32m\u001b[1m   Resolving\u001b[22m\u001b[39m package versions...\n",
+      "\u001b[32m\u001b[1m  No Changes\u001b[22m\u001b[39m to `~/repos/julia/Introduction-to-Julia/Project.toml`\n",
+      "\u001b[32m\u001b[1m  No Changes\u001b[22m\u001b[39m to `~/repos/julia/Introduction-to-Julia/Manifest.toml`\n"
+     ]
+    }
+   ],
+   "source": [
+    "Pkg.add(\"Primes\")\n",
+    "using Primes"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -406,14 +596,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "78498-element Vector{Int64}:\n",
+       "      2\n",
+       "      3\n",
+       "      5\n",
+       "      7\n",
+       "     11\n",
+       "     13\n",
+       "     17\n",
+       "     19\n",
+       "     23\n",
+       "     29\n",
+       "     31\n",
+       "     37\n",
+       "     41\n",
+       "      ⋮\n",
+       " 999809\n",
+       " 999853\n",
+       " 999863\n",
+       " 999883\n",
+       " 999907\n",
+       " 999917\n",
+       " 999931\n",
+       " 999953\n",
+       " 999959\n",
+       " 999961\n",
+       " 999979\n",
+       " 999983"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "primes_list = primes(1000000)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -432,11 +661,18 @@
    "source": [
     "@assert primes_list == primes(1000000)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.6.0",
+   "display_name": "Julia 1.6.4",
    "language": "julia",
    "name": "julia-1.6"
   },
@@ -444,7 +680,7 @@
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.6.0"
+   "version": "1.6.4"
   }
  },
  "nbformat": 4,
